force-app/main/default/objects/Canvas_Enrollment_Batch__c/Canvas_Enrollment_Batch__c.object-meta.xml
<CustomObject>
    <description>Batch header for enrollments executed through the API.</description>
    <label>Canvas Enrollment Batch</label>
    <nameField>
        <displayFormat>EB-{000000}</displayFormat>
        <label>Canvas Enrollment Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canvas Enrollment Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>