force-app/main/default/objects/Canvas_Enrollment_Batch__c/fields/Canvas_Course__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The course selected for the enrollment through the API.</description>
    <label>Canvas Course</label>
    <referenceTo>Canvas_Course__c</referenceTo>
    <relationshipLabel>Canvas Enrollment Batches</relationshipLabel>
    <relationshipName>Canvas_Enrollment_Batches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>