force-app/main/default/objects/Canvas_Enrollment_Batch__c/fields/CreationProcess__c.field-meta.xml
<CustomField>
    <fullName>CreationProcess__c</fullName>
    <description>A description of the process that created the batch (example: Manual, or Campaign Trigger)</description>
    <label>CreationProcess</label>
    <length>32</length>
    <type>Text</type>
</CustomField>