force-app/main/default/objects/Canvas_Enrollment_Batch__c/fields/Enrolled_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Enrolled Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>