force-app/main/default/objects/Canvas_Enrollment_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CreationProcess__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>